--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.47.0",
+    "axios": "^1.6.7",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
-    "@tabler/icons": "^2.47.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "framer-motion": "^11.0.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
